Side drawer module setup